# rust-sample-boilerplate

./: .env  Cargo.toml
src/: main.rs
src/api/: mod.rs
src/db/: context.rs  mod.rs  user.rs
src/models/: base.rs
