[package]
name = "actix-sev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = {version="4", default-features=false}
sqlx = { version = "0.3.5", features = ["mysql"], default-features=false }
dotenv = "0.15.0" 
serde = "1.0.147"
serde_derive = "1.0.91"
serde_json = "1.0.39"
async-trait = "0.1.52"
anyhow = { version = "1.0.56", features = ["backtrace"] }
futures = "0.3"
futures-util = "0.3.21"
http = "0.2.6"
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.10.0"
failure = "0.1.5"